--- a/_sitemap.html
+++ b/_sitemap.html
@@ -174,6 +174,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1ffj0ar{background-color:rgba(0,0,0,0.40);}
 .r-1g80hic{opacity:0.8;}
 .r-1ge9hsw{max-width:960px;}
+.r-1gh1dx5{color:rgba(255,107,107,1.00);}
 .r-1ghxqbu{font-variant:tabular-nums;}
 .r-1h0z5md{justify-content:flex-start;}
 .r-1h2t8mc{width:0px;}
@@ -370,5 +371,5 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 @keyframes r-1pzkwqh{0%{transform:translateY(100%);}100%{transform:translateY(0%);}}
 @keyframes r-imtty0{0%{opacity:0;}100%{opacity:1;}}
 @keyframes r-q67da2{0%{transform:translateX(-100%);}100%{transform:translateX(400%);}}
-@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/word-game/_expo/static/css/global-83fbd444ac6162800fe9fad5de6b6a48.css" as="style"><link rel="stylesheet" href="/word-game/_expo/static/css/global-83fbd444ac6162800fe9fad5de6b6a48.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/word-game/_expo/static/js/web/entry-1b3a0823a5a9199a2fa468a71640f92d.js" defer></script>
+@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/word-game/_expo/static/css/global-83fbd444ac6162800fe9fad5de6b6a48.css" as="style"><link rel="stylesheet" href="/word-game/_expo/static/css/global-83fbd444ac6162800fe9fad5de6b6a48.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/word-game/_expo/static/js/web/entry-9d01c81137abe97ef84aebb12c7f8957.js" defer></script>
 </body></html>
