--- a/_sitemap.html
+++ b/_sitemap.html
@@ -18,6 +18,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1dumxj3{margin:2px;}
 .r-1dzdj1l{border-bottom-left-radius:10px;border-bottom-right-radius:10px;border-top-left-radius:10px;border-top-right-radius:10px;}
 .r-1f0042m{border-bottom-left-radius:5px;border-bottom-right-radius:5px;border-top-left-radius:5px;border-top-right-radius:5px;}
+.r-1h84pjw{border-bottom-left-radius:25px;border-bottom-right-radius:25px;border-top-left-radius:25px;border-top-right-radius:25px;}
 .r-1j16mh1{border-bottom-left-radius:100%;border-bottom-right-radius:100%;border-top-left-radius:100%;border-top-right-radius:100%;}
 .r-1jkafct{border-bottom-left-radius:2px;border-bottom-right-radius:2px;border-top-left-radius:2px;border-top-right-radius:2px;}
 .r-1jyn79y{border-bottom-color:rgba(0,150,136,1.00);border-left-color:rgba(0,150,136,1.00);border-right-color:rgba(0,150,136,1.00);border-top-color:rgba(0,150,136,1.00);}
@@ -62,6 +63,8 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-184id4b{margin-bottom:12px;margin-top:12px;}
 .r-1d7mnkm{padding-bottom:15px;padding-top:15px;}
 .r-1e084wi{padding-left:0px;padding-right:0px;}
+.r-1fkl15p{padding-left:32px;padding-right:32px;}
+.r-1ml3abn{padding-bottom:14px;padding-top:14px;}
 .r-1mmae3n{padding-bottom:12px;padding-top:12px;}
 .r-1ntr0p{padding-left:5px;padding-right:5px;}
 .r-1rsorjc{padding-left:36px;padding-right:36px;}
@@ -109,6 +112,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-10v3vxq{transform:scaleX(-1);}
 .r-10x49cs{font-size:10px;}
 .r-10xqauy{padding-top:env(safe-area-inset-top);}
+.r-117bsoe{margin-bottom:20px;}
 .r-118dpqk{color:rgba(15,15,26,1.00);}
 .r-11j9u27{visibility:hidden;}
 .r-11mpjr4{background-color:rgba(223,223,223,1.00);}
@@ -164,6 +168,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1ddef8g{-webkit-text-decoration-line:underline;text-decoration-line:underline;}
 .r-1dernwh{height:70%;}
 .r-1dnsj32{color:rgba(128,128,128,1.00);}
+.r-1dx08gc{background-color:rgba(26,10,10,1.00);}
 .r-1e6zz2d{color:rgba(221,221,221,1.00);}
 .r-1ei5mc7{cursor:inherit;}
 .r-1enofrn{font-size:12px;}
@@ -209,6 +214,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1oszu61{align-items:stretch;}
 .r-1otgn73{touch-action:manipulation;}
 .r-1p0dtai{bottom:0px;}
+.r-1peese0{margin-bottom:24px;}
 .r-1pi2tsx{height:100%;}
 .r-1pm8pkb{font-family:Courier;}
 .r-1qd0xha{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;}
@@ -245,6 +251,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-30o5oe{-moz-appearance:none;-ms-appearance:none;-webkit-appearance:none;appearance:none;}
 .r-356f0p{letter-spacing:0.35px;}
 .r-37tt59{line-height:32px;}
+.r-3i2nvb{font-size:36px;}
 .r-3mc0re{right:8px;}
 .r-3s2u2q{white-space:nowrap;}
 .r-417010{z-index:0;}
@@ -267,6 +274,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-76blku{height:21px;}
 .r-7cikom{font-size:inherit;}
 .r-7q8q6z{cursor:default;}
+.r-87bcf5{font-size:80px;}
 .r-8akbws{-webkit-box-orient:vertical;}
 .r-8ay8q1{letter-spacing:0.1px;}
 .r-97e31f{padding-bottom:env(safe-area-inset-bottom);}
@@ -372,5 +380,5 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 @keyframes r-1pzkwqh{0%{transform:translateY(100%);}100%{transform:translateY(0%);}}
 @keyframes r-imtty0{0%{opacity:0;}100%{opacity:1;}}
 @keyframes r-q67da2{0%{transform:translateX(-100%);}100%{transform:translateX(400%);}}
-@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/word-game/_expo/static/css/global-83fbd444ac6162800fe9fad5de6b6a48.css" as="style"><link rel="stylesheet" href="/word-game/_expo/static/css/global-83fbd444ac6162800fe9fad5de6b6a48.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/word-game/_expo/static/js/web/entry-47a475da1a125f785ec33f03e9341fea.js" defer></script>
+@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/word-game/_expo/static/css/global-83fbd444ac6162800fe9fad5de6b6a48.css" as="style"><link rel="stylesheet" href="/word-game/_expo/static/css/global-83fbd444ac6162800fe9fad5de6b6a48.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/word-game/_expo/static/js/web/entry-c3b4e059c65bd7fbd57f4fea57e47a65.js" defer></script>
 </body></html>
