--- a/_sitemap.html
+++ b/_sitemap.html
@@ -48,6 +48,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-jbgbl{border-bottom-color:rgba(106,159,255,1.00);border-left-color:rgba(106,159,255,1.00);border-right-color:rgba(106,159,255,1.00);border-top-color:rgba(106,159,255,1.00);}
 .r-krxsd3{display:-webkit-box;}
 .r-nsbfu8{padding:16px;}
+.r-qrip3q{border-bottom-color:rgba(74,74,110,1.00);border-left-color:rgba(74,74,110,1.00);border-right-color:rgba(74,74,110,1.00);border-top-color:rgba(74,74,110,1.00);}
 .r-rs99b7{border-bottom-width:1px;border-left-width:1px;border-right-width:1px;border-top-width:1px;}
 .r-t60dpp{padding:0px;}
 .r-tuq35u{padding:4px;}
@@ -178,7 +179,6 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1enofrn{font-size:12px;}
 .r-1euycsn{flex-direction:row-reverse;}
 .r-1ewcgjf{box-shadow:0px 1px 3px rgba(0,0,0,0.5);}
-.r-1ey2ra3{width:70px;}
 .r-1eyk4v3{color:rgba(106,159,255,1.00);}
 .r-1ff274t{text-align:right;}
 .r-1ffj0ar{background-color:rgba(0,0,0,0.40);}
@@ -306,6 +306,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-djgu52{color:rgba(102,102,102,1.00);}
 .r-dkge59{background-color:rgba(170,184,194,1.00);}
 .r-dnmrzs{max-width:100%;}
+.r-dpkc41{background-color:rgba(239,68,68,1.00);}
 .r-eafdt9{transition-duration:0.15s;}
 .r-ebwn4k{animation-name:r-q67da2;}
 .r-ehq7j7{background-size:contain;}
@@ -383,6 +384,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-yy2aun{font-size:26px;}
 .r-z80fyv{height:20px;}
 .r-zchlnj{right:0px;}
+.r-zebfov{box-shadow:0px 0px 4px rgba(239,68,68,0.50);}
 .r-zz5t5d{font-size:28px;}
 @-webkit-keyframes r-11cv4x{0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}
 @-webkit-keyframes r-1iq689l{0%{transform:translateY(0%);}100%{transform:translateY(100%);}}
@@ -395,5 +397,5 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 @keyframes r-1pzkwqh{0%{transform:translateY(100%);}100%{transform:translateY(0%);}}
 @keyframes r-imtty0{0%{opacity:0;}100%{opacity:1;}}
 @keyframes r-q67da2{0%{transform:translateX(-100%);}100%{transform:translateX(400%);}}
-@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/word-game/_expo/static/css/global-83fbd444ac6162800fe9fad5de6b6a48.css" as="style"><link rel="stylesheet" href="/word-game/_expo/static/css/global-83fbd444ac6162800fe9fad5de6b6a48.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/word-game/_expo/static/js/web/entry-a140e8746d74ccdf1aeb72864137ea36.js" defer></script>
+@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/word-game/_expo/static/css/global-83fbd444ac6162800fe9fad5de6b6a48.css" as="style"><link rel="stylesheet" href="/word-game/_expo/static/css/global-83fbd444ac6162800fe9fad5de6b6a48.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/word-game/_expo/static/js/web/entry-42deeb5da6f79d450260495527b8a93e.js" defer></script>
 </body></html>
