--- a/_sitemap.html
+++ b/_sitemap.html
@@ -25,6 +25,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1jyn79y{border-bottom-color:rgba(0,150,136,1.00);border-left-color:rgba(0,150,136,1.00);border-right-color:rgba(0,150,136,1.00);border-top-color:rgba(0,150,136,1.00);}
 .r-1pcd2l5{padding:20px;}
 .r-1phboty{border-bottom-style:solid;border-left-style:solid;border-right-style:solid;border-top-style:solid;}
+.r-1px6drs{border-bottom-left-radius:7px;border-bottom-right-radius:7px;border-top-left-radius:7px;border-top-right-radius:7px;}
 .r-1q9bdsx{border-bottom-left-radius:12px;border-bottom-right-radius:12px;border-top-left-radius:12px;border-top-right-radius:12px;}
 .r-1qsk4np{overflow-x:clip;overflow-y:clip;}
 .r-1rvyss1{border-bottom-color:rgba(255,255,255,0.20);border-left-color:rgba(255,255,255,0.20);border-right-color:rgba(255,255,255,0.20);border-top-color:rgba(255,255,255,0.20);}
@@ -208,6 +209,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1ld3bg{top:-4px;}
 .r-1ldzwu0{animation-timing-function:linear;}
 .r-1loqt21{cursor:pointer;}
+.r-1mcorv5{width:14px;}
 .r-1mlwlqe{flex-basis:auto;}
 .r-1mrlafo{background-position:0;}
 .r-1muvv40{animation-iteration-count:infinite;}
@@ -222,6 +224,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1otgn73{touch-action:manipulation;}
 .r-1p0dtai{bottom:0px;}
 .r-1peese0{margin-bottom:24px;}
+.r-1pexk7n{height:14px;}
 .r-1pi2tsx{height:100%;}
 .r-1pm8pkb{font-family:Courier;}
 .r-1qd0xha{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;}
@@ -289,6 +292,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-97e31f{padding-bottom:env(safe-area-inset-bottom);}
 .r-9daxd3{animation-duration:250ms;}
 .r-a023e6{font-size:15px;}
+.r-a5pmau{margin-right:2px;}
 .r-adyw6z{font-size:20px;}
 .r-agouwx{transform:translateZ(0);}
 .r-ah5dr5>* {pointer-events:none;}
@@ -397,5 +401,5 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 @keyframes r-1pzkwqh{0%{transform:translateY(100%);}100%{transform:translateY(0%);}}
 @keyframes r-imtty0{0%{opacity:0;}100%{opacity:1;}}
 @keyframes r-q67da2{0%{transform:translateX(-100%);}100%{transform:translateX(400%);}}
-@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/word-game/_expo/static/css/global-83fbd444ac6162800fe9fad5de6b6a48.css" as="style"><link rel="stylesheet" href="/word-game/_expo/static/css/global-83fbd444ac6162800fe9fad5de6b6a48.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/word-game/_expo/static/js/web/entry-42deeb5da6f79d450260495527b8a93e.js" defer></script>
+@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/word-game/_expo/static/css/global-83fbd444ac6162800fe9fad5de6b6a48.css" as="style"><link rel="stylesheet" href="/word-game/_expo/static/css/global-83fbd444ac6162800fe9fad5de6b6a48.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/word-game/_expo/static/js/web/entry-4333019f6feaf91bb7ff1b681a373a8e.js" defer></script>
 </body></html>
