--- a/explore.html
+++ b/explore.html
@@ -47,7 +47,6 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-fx7oqy{border-bottom-color:rgba(0,0,255,1.00);border-left-color:rgba(0,0,255,1.00);border-right-color:rgba(0,0,255,1.00);border-top-color:rgba(0,0,255,1.00);}
 .r-jbgbl{border-bottom-color:rgba(106,159,255,1.00);border-left-color:rgba(106,159,255,1.00);border-right-color:rgba(106,159,255,1.00);border-top-color:rgba(106,159,255,1.00);}
 .r-krxsd3{display:-webkit-box;}
-.r-nsbfu8{padding:16px;}
 .r-qrip3q{border-bottom-color:rgba(74,74,110,1.00);border-left-color:rgba(74,74,110,1.00);border-right-color:rgba(74,74,110,1.00);border-top-color:rgba(74,74,110,1.00);}
 .r-rs99b7{border-bottom-width:1px;border-left-width:1px;border-right-width:1px;border-top-width:1px;}
 .r-t60dpp{padding:0px;}
@@ -135,9 +134,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-14lw9ot{background-color:rgba(255,255,255,1.00);}
 .r-14sbq61{background-color:rgba(33,150,243,1.00);}
 .r-150rngu{-webkit-overflow-scrolling:touch;}
-.r-1517nx3{transform:translateY(-50%);}
 .r-15zivkp{margin-bottom:4px;}
-.r-161ttwi{left:12px;}
 .r-16y2uox{flex-grow:1;}
 .r-173mn98{align-self:flex-end;}
 .r-173mzie{transform:scaleY(-1);}
@@ -166,6 +163,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1awozwy{align-items:center;}
 .r-1ay1djp{animation-duration:1s;}
 .r-1b43r93{font-size:14px;}
+.r-1bymd8e{margin-top:2px;}
 .r-1c6unfx{forced-color-adjust:none;}
 .r-1c85bru{width:270px;}
 .r-1cmwbt1{gap:8px;}
@@ -194,6 +192,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1i10wst{font-size:18px;}
 .r-1i6wzkk{-moz-transition-property:opacity;-webkit-transition-property:opacity;transition-property:opacity;}
 .r-1i71y14{gap:14px;}
+.r-1ifxtd0{margin-bottom:16px;}
 .r-1ikidpy{letter-spacing:0.5px;}
 .r-1iln25a{word-wrap:normal;}
 .r-1inkyih{font-size:17px;}
@@ -231,6 +230,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1r74h94{left:8px;}
 .r-1r8g8re{height:36px;}
 .r-1rnoaur{overflow-y:auto;}
+.r-1s06vhe{color:rgba(160,160,160,1.00);}
 .r-1seqbyq{background-color:rgba(74,74,110,1.00);}
 .r-1sg8ghl{z-index:1000;}
 .r-1shoneg{background-color:rgba(90,58,138,1.00);}
@@ -241,7 +241,6 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1u9a0t5{background-color:rgba(255,107,107,1.00);}
 .r-1udbk01{text-overflow:ellipsis;}
 .r-1ui5ee8{font-size:32px;}
-.r-1v2oles{top:50%;}
 .r-1v78gzs{color:rgba(10,126,164,1.00);}
 .r-1vr29t4{font-weight:800;}
 .r-1w2pmg{height:0px;}
@@ -291,6 +290,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-97e31f{padding-bottom:env(safe-area-inset-bottom);}
 .r-9daxd3{animation-duration:250ms;}
 .r-a023e6{font-size:15px;}
+.r-a2tzq0{justify-content:space-around;}
 .r-adyw6z{font-size:20px;}
 .r-agouwx{transform:translateZ(0);}
 .r-ah5dr5>* {pointer-events:none;}
@@ -298,7 +298,6 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-aruset{font-weight:200;}
 .r-b88u0q{font-weight:700;}
 .r-bi4vy9{transform:translateY(100%);}
-.r-bnwqim{position:relative;}
 .r-bt1l66{min-height:20px;}
 .r-buy8e9{overflow-y:hidden;}
 .r-bv2aro{padding-left:env(safe-area-inset-left);}
@@ -328,6 +327,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-hxflta{padding-right:env(safe-area-inset-right);}
 .r-icoktb{opacity:0.5;}
 .r-ipm5af{top:0px;}
+.r-j03pct{min-width:80px;}
 .r-j3520h{background-color:rgba(26,61,45,1.00);}
 .r-jwli3a{color:rgba(255,255,255,1.00);}
 .r-k200y{align-self:flex-start;}
@@ -335,7 +335,6 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-kemksi{background-color:rgba(0,0,0,1.00);}
 .r-kizejy{color:rgba(155,161,166,1.00);}
 .r-knv0ih{margin-top:8px;}
-.r-kzbkwu{padding-bottom:12px;}
 .r-leqjx2{animation-timing-function:cubic-bezier(0.215, 0.61, 0.355, 1);}
 .r-lltvgl{overflow-x:auto;}
 .r-lpb231{height:168px;}
@@ -365,12 +364,12 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-tl32pe{background-color:rgba(58,90,138,1.00);}
 .r-tskmnb{padding-top:8px;}
 .r-tsynxw{text-transform:uppercase;}
-.r-ttdzmv{padding-top:12px;}
 .r-u6sd8q{background-repeat:no-repeat;}
 .r-u8s1d{position:absolute;}
 .r-u92y06{background-color:rgba(255,165,0,1.00);}
 .r-ubezar{font-size:16px;}
 .r-uho16t{font-size:34px;}
+.r-usgzl9{width:44px;}
 .r-uz6nru{border-top-color:rgba(42,42,78,1.00);}
 .r-vacyoi{padding-bottom:64px;}
 .r-van48c{caret-color:transparent;}
@@ -400,5 +399,5 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 @keyframes r-1pzkwqh{0%{transform:translateY(100%);}100%{transform:translateY(0%);}}
 @keyframes r-imtty0{0%{opacity:0;}100%{opacity:1;}}
 @keyframes r-q67da2{0%{transform:translateX(-100%);}100%{transform:translateX(400%);}}
-@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css" as="style"><link rel="stylesheet" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"><!--$--><div class="css-g5y9jx r-mm4w40 r-13awgt0"><div class="css-g5y9jx r-13awgt0"><div class="css-g5y9jx r-13awgt0 r-1p0dtai r-1d2f490 r-u8s1d r-zchlnj r-ipm5af" style="background-color:rgba(15,15,26,1.00);display:flex"><div class="css-g5y9jx r-13awgt0"><div class="css-g5y9jx r-13awgt0" style="background-color:rgba(15,15,26,1.00)"><!--$--><div class="css-g5y9jx r-13awgt0" style="flex-direction:column"><div class="css-g5y9jx r-13awgt0 r-1udh08x"><div class="css-g5y9jx r-1p0dtai r-1d2f490 r-u8s1d r-zchlnj r-ipm5af" style="z-index:0"><div class="css-g5y9jx r-13awgt0" style="background-color:rgba(15,15,26,1.00)"><div class="css-g5y9jx r-13awgt0"><!--$--><div class="css-g5y9jx r-150rngu r-eqz5dr r-16y2uox r-1wbh5a2 r-11yh6sk r-1rnoaur r-agouwx" style="background-color:rgba(255,255,255,1.00);flex:1" id="2"><div class="css-g5y9jx"><div class="css-g5y9jx" style="height:250px;overflow-x:hidden;overflow-y:hidden;background-color:rgba(208,208,208,1.00);transform:translateY(0px) scale(1)" id="3"><div dir="auto" class="css-146c3p1"></div></div><div class="css-g5y9jx r-13awgt0 r-f4gmv6 r-1udh08x r-494qqr" style="background-color:rgba(255,255,255,1.00)"><div class="css-g5y9jx r-18u37iz r-1cmwbt1" style="background-color:rgba(255,255,255,1.00)"><div dir="auto" class="css-146c3p1 r-1ui5ee8 r-vw2c0b r-37tt59" style="color:rgba(17,24,28,1.00);font-family:&#x27;SF Pro Rounded&#x27;, &#x27;Hiragino Maru Gothic ProN&#x27;, Meiryo, &#x27;MS PGothic&#x27;, sans-serif">Explore</div></div><div dir="auto" class="css-146c3p1 r-ubezar r-135wba7" style="color:rgba(17,24,28,1.00)">This app includes example code to help you get started.</div><div class="css-g5y9jx" style="background-color:rgba(255,255,255,1.00)"><div tabindex="0" class="css-g5y9jx r-1i6wzkk r-lrvibr r-1loqt21 r-1otgn73 r-1awozwy r-18u37iz r-ojf8lh" style="transition-duration:0s"><div dir="auto" class="css-146c3p1"></div><div dir="auto" class="css-146c3p1 r-ubezar r-1kfrs79 r-135wba7" style="color:rgba(17,24,28,1.00)">File-based routing</div></div></div><div class="css-g5y9jx" style="background-color:rgba(255,255,255,1.00)"><div tabindex="0" class="css-g5y9jx r-1i6wzkk r-lrvibr r-1loqt21 r-1otgn73 r-1awozwy r-18u37iz r-ojf8lh" style="transition-duration:0s"><div dir="auto" class="css-146c3p1"></div><div dir="auto" class="css-146c3p1 r-ubezar r-1kfrs79 r-135wba7" style="color:rgba(17,24,28,1.00)">Android, iOS, and web support</div></div></div><div class="css-g5y9jx" style="background-color:rgba(255,255,255,1.00)"><div tabindex="0" class="css-g5y9jx r-1i6wzkk r-lrvibr r-1loqt21 r-1otgn73 r-1awozwy r-18u37iz r-ojf8lh" style="transition-duration:0s"><div dir="auto" class="css-146c3p1"></div><div dir="auto" class="css-146c3p1 r-ubezar r-1kfrs79 r-135wba7" style="color:rgba(17,24,28,1.00)">Images</div></div></div><div class="css-g5y9jx" style="background-color:rgba(255,255,255,1.00)"><div tabindex="0" class="css-g5y9jx r-1i6wzkk r-lrvibr r-1loqt21 r-1otgn73 r-1awozwy r-18u37iz r-ojf8lh" style="transition-duration:0s"><div dir="auto" class="css-146c3p1"></div><div dir="auto" class="css-146c3p1 r-ubezar r-1kfrs79 r-135wba7" style="color:rgba(17,24,28,1.00)">Light and dark mode components</div></div></div><div class="css-g5y9jx" style="background-color:rgba(255,255,255,1.00)"><div tabindex="0" class="css-g5y9jx r-1i6wzkk r-lrvibr r-1loqt21 r-1otgn73 r-1awozwy r-18u37iz r-ojf8lh" style="transition-duration:0s"><div dir="auto" class="css-146c3p1"></div><div dir="auto" class="css-146c3p1 r-ubezar r-1kfrs79 r-135wba7" style="color:rgba(17,24,28,1.00)">Animations</div></div></div></div></div></div><!--/$--></div></div></div></div><div class="css-g5y9jx r-1p0dtai r-zchlnj r-1d2f490 r-105ug2t" style="border-top-width:1px;border-right-color:rgba(39,39,41,1.00);border-bottom-color:rgba(39,39,41,1.00);border-left-color:rgba(39,39,41,1.00);height:49px;padding-bottom:0px;padding-top:0px;padding-right:0px;padding-left:0px;background-color:rgba(15,15,26,1.00);border-top-color:rgba(42,42,78,1.00);display:none;transform:translateY(0px)"><div class="css-g5y9jx r-1p0dtai r-1d2f490 r-u8s1d r-zchlnj r-ipm5af r-633pao"></div><div role="tablist" class="css-g5y9jx r-13awgt0 r-18u37iz"><div class="css-g5y9jx r-13awgt0" style="border-top-left-radius:0px;border-top-right-radius:0px;border-bottom-right-radius:0px;border-bottom-left-radius:0px;overflow-x:visible;overflow-y:visible"><a href="/intersections/" role="tab" aria-selected="false" tabindex="0" class="css-g5y9jx r-1otgn73 r-1awozwy r-1onu96p r-eqz5dr r-1h0z5md r-1uu6nss" style="cursor:pointer;flex:1;background-color:rgba(0,0,0,0.00);border-top-left-radius:0px;border-top-right-radius:0px;border-bottom-right-radius:0px;border-bottom-left-radius:0px;opacity:1"><div class="css-g5y9jx r-h0d30l r-726pan"><div class="css-g5y9jx r-1awozwy r-1kihuf0 r-1pi2tsx r-1777fci r-u8s1d r-13qz1uu" style="opacity:0;min-width:25px"><div dir="auto" class="css-146c3p1"></div></div><div class="css-g5y9jx r-1awozwy r-1kihuf0 r-1pi2tsx r-1777fci r-u8s1d r-13qz1uu" style="opacity:1"><div dir="auto" class="css-146c3p1"></div></div></div><div dir="auto" class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-1niwhzg r-q4m81j r-10x49cs" style="color:rgba(102,102,102,1.00);font-family:system-ui, &quot;Segoe UI&quot;, Roboto, Helvetica, Arial, sans-serif, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;;font-weight:500">Play</div></a></div><div class="css-g5y9jx r-13awgt0" style="border-top-left-radius:0px;border-top-right-radius:0px;border-bottom-right-radius:0px;border-bottom-left-radius:0px;overflow-x:visible;overflow-y:visible;display:none"></div></div></div></div><!--/$--></div></div></div><div style="position:absolute;left:0;right:0;top:0;bottom:0;pointer-events:none;visibility:hidden"></div></div></div><!--/$--></div></div><script src="/intersections/_expo/static/js/web/entry-4e7442cfdc096945c211e5df8dbfc849.js" defer></script>
+@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css" as="style"><link rel="stylesheet" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"><!--$--><div class="css-g5y9jx r-mm4w40 r-13awgt0"><div class="css-g5y9jx r-13awgt0"><div class="css-g5y9jx r-13awgt0 r-1p0dtai r-1d2f490 r-u8s1d r-zchlnj r-ipm5af" style="background-color:rgba(15,15,26,1.00);display:flex"><div class="css-g5y9jx r-13awgt0"><div class="css-g5y9jx r-13awgt0" style="background-color:rgba(15,15,26,1.00)"><!--$--><div class="css-g5y9jx r-13awgt0" style="flex-direction:column"><div class="css-g5y9jx r-13awgt0 r-1udh08x"><div class="css-g5y9jx r-1p0dtai r-1d2f490 r-u8s1d r-zchlnj r-ipm5af" style="z-index:0"><div class="css-g5y9jx r-13awgt0" style="background-color:rgba(15,15,26,1.00)"><div class="css-g5y9jx r-13awgt0"><!--$--><div class="css-g5y9jx r-150rngu r-eqz5dr r-16y2uox r-1wbh5a2 r-11yh6sk r-1rnoaur r-agouwx" style="background-color:rgba(255,255,255,1.00);flex:1" id="2"><div class="css-g5y9jx"><div class="css-g5y9jx" style="height:250px;overflow-x:hidden;overflow-y:hidden;background-color:rgba(208,208,208,1.00);transform:translateY(0px) scale(1)" id="3"><div dir="auto" class="css-146c3p1"></div></div><div class="css-g5y9jx r-13awgt0 r-f4gmv6 r-1udh08x r-494qqr" style="background-color:rgba(255,255,255,1.00)"><div class="css-g5y9jx r-18u37iz r-1cmwbt1" style="background-color:rgba(255,255,255,1.00)"><div dir="auto" class="css-146c3p1 r-1ui5ee8 r-vw2c0b r-37tt59" style="color:rgba(17,24,28,1.00);font-family:&#x27;SF Pro Rounded&#x27;, &#x27;Hiragino Maru Gothic ProN&#x27;, Meiryo, &#x27;MS PGothic&#x27;, sans-serif">Explore</div></div><div dir="auto" class="css-146c3p1 r-ubezar r-135wba7" style="color:rgba(17,24,28,1.00)">This app includes example code to help you get started.</div><div class="css-g5y9jx" style="background-color:rgba(255,255,255,1.00)"><div tabindex="0" class="css-g5y9jx r-1i6wzkk r-lrvibr r-1loqt21 r-1otgn73 r-1awozwy r-18u37iz r-ojf8lh" style="transition-duration:0s"><div dir="auto" class="css-146c3p1"></div><div dir="auto" class="css-146c3p1 r-ubezar r-1kfrs79 r-135wba7" style="color:rgba(17,24,28,1.00)">File-based routing</div></div></div><div class="css-g5y9jx" style="background-color:rgba(255,255,255,1.00)"><div tabindex="0" class="css-g5y9jx r-1i6wzkk r-lrvibr r-1loqt21 r-1otgn73 r-1awozwy r-18u37iz r-ojf8lh" style="transition-duration:0s"><div dir="auto" class="css-146c3p1"></div><div dir="auto" class="css-146c3p1 r-ubezar r-1kfrs79 r-135wba7" style="color:rgba(17,24,28,1.00)">Android, iOS, and web support</div></div></div><div class="css-g5y9jx" style="background-color:rgba(255,255,255,1.00)"><div tabindex="0" class="css-g5y9jx r-1i6wzkk r-lrvibr r-1loqt21 r-1otgn73 r-1awozwy r-18u37iz r-ojf8lh" style="transition-duration:0s"><div dir="auto" class="css-146c3p1"></div><div dir="auto" class="css-146c3p1 r-ubezar r-1kfrs79 r-135wba7" style="color:rgba(17,24,28,1.00)">Images</div></div></div><div class="css-g5y9jx" style="background-color:rgba(255,255,255,1.00)"><div tabindex="0" class="css-g5y9jx r-1i6wzkk r-lrvibr r-1loqt21 r-1otgn73 r-1awozwy r-18u37iz r-ojf8lh" style="transition-duration:0s"><div dir="auto" class="css-146c3p1"></div><div dir="auto" class="css-146c3p1 r-ubezar r-1kfrs79 r-135wba7" style="color:rgba(17,24,28,1.00)">Light and dark mode components</div></div></div><div class="css-g5y9jx" style="background-color:rgba(255,255,255,1.00)"><div tabindex="0" class="css-g5y9jx r-1i6wzkk r-lrvibr r-1loqt21 r-1otgn73 r-1awozwy r-18u37iz r-ojf8lh" style="transition-duration:0s"><div dir="auto" class="css-146c3p1"></div><div dir="auto" class="css-146c3p1 r-ubezar r-1kfrs79 r-135wba7" style="color:rgba(17,24,28,1.00)">Animations</div></div></div></div></div></div><!--/$--></div></div></div></div><div class="css-g5y9jx r-1p0dtai r-zchlnj r-1d2f490 r-105ug2t" style="border-top-width:1px;border-right-color:rgba(39,39,41,1.00);border-bottom-color:rgba(39,39,41,1.00);border-left-color:rgba(39,39,41,1.00);height:49px;padding-bottom:0px;padding-top:0px;padding-right:0px;padding-left:0px;background-color:rgba(15,15,26,1.00);border-top-color:rgba(42,42,78,1.00);display:none;transform:translateY(0px)"><div class="css-g5y9jx r-1p0dtai r-1d2f490 r-u8s1d r-zchlnj r-ipm5af r-633pao"></div><div role="tablist" class="css-g5y9jx r-13awgt0 r-18u37iz"><div class="css-g5y9jx r-13awgt0" style="border-top-left-radius:0px;border-top-right-radius:0px;border-bottom-right-radius:0px;border-bottom-left-radius:0px;overflow-x:visible;overflow-y:visible"><a href="/intersections/" role="tab" aria-selected="false" tabindex="0" class="css-g5y9jx r-1otgn73 r-1awozwy r-1onu96p r-eqz5dr r-1h0z5md r-1uu6nss" style="cursor:pointer;flex:1;background-color:rgba(0,0,0,0.00);border-top-left-radius:0px;border-top-right-radius:0px;border-bottom-right-radius:0px;border-bottom-left-radius:0px;opacity:1"><div class="css-g5y9jx r-h0d30l r-726pan"><div class="css-g5y9jx r-1awozwy r-1kihuf0 r-1pi2tsx r-1777fci r-u8s1d r-13qz1uu" style="opacity:0;min-width:25px"><div dir="auto" class="css-146c3p1"></div></div><div class="css-g5y9jx r-1awozwy r-1kihuf0 r-1pi2tsx r-1777fci r-u8s1d r-13qz1uu" style="opacity:1"><div dir="auto" class="css-146c3p1"></div></div></div><div dir="auto" class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-1niwhzg r-q4m81j r-10x49cs" style="color:rgba(102,102,102,1.00);font-family:system-ui, &quot;Segoe UI&quot;, Roboto, Helvetica, Arial, sans-serif, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;;font-weight:500">Play</div></a></div><div class="css-g5y9jx r-13awgt0" style="border-top-left-radius:0px;border-top-right-radius:0px;border-bottom-right-radius:0px;border-bottom-left-radius:0px;overflow-x:visible;overflow-y:visible;display:none"></div></div></div></div><!--/$--></div></div></div><div style="position:absolute;left:0;right:0;top:0;bottom:0;pointer-events:none;visibility:hidden"></div></div></div><!--/$--></div></div><script src="/intersections/_expo/static/js/web/entry-9dc3b43a1ff3a5fc71ef6f83c130614f.js" defer></script>
 </body></html>
