--- a/_sitemap.html
+++ b/_sitemap.html
@@ -70,7 +70,6 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1mmae3n{padding-bottom:12px;padding-top:12px;}
 .r-1ntr0p{padding-left:5px;padding-right:5px;}
 .r-1rsorjc{padding-left:36px;padding-right:36px;}
-.r-1xpp3t0{margin-left:16px;margin-right:16px;}
 .r-1yd117h{padding-bottom:7px;padding-top:7px;}
 .r-3o4zer{padding-left:12px;padding-right:12px;}
 .r-3pj75a{padding-left:16px;padding-right:16px;}
@@ -163,7 +162,6 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1awozwy{align-items:center;}
 .r-1ay1djp{animation-duration:1s;}
 .r-1b43r93{font-size:14px;}
-.r-1bymd8e{margin-top:2px;}
 .r-1c6unfx{forced-color-adjust:none;}
 .r-1c85bru{width:270px;}
 .r-1cmwbt1{gap:8px;}
@@ -193,6 +191,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1i6wzkk{-moz-transition-property:opacity;-webkit-transition-property:opacity;transition-property:opacity;}
 .r-1i71y14{gap:14px;}
 .r-1ifxtd0{margin-bottom:16px;}
+.r-1ijim6u{background-color:rgba(26,46,31,1.00);}
 .r-1ikidpy{letter-spacing:0.5px;}
 .r-1iln25a{word-wrap:normal;}
 .r-1inkyih{font-size:17px;}
@@ -230,7 +229,6 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1r74h94{left:8px;}
 .r-1r8g8re{height:36px;}
 .r-1rnoaur{overflow-y:auto;}
-.r-1s06vhe{color:rgba(160,160,160,1.00);}
 .r-1seqbyq{background-color:rgba(74,74,110,1.00);}
 .r-1sg8ghl{z-index:1000;}
 .r-1shoneg{background-color:rgba(90,58,138,1.00);}
@@ -266,6 +264,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-417010{z-index:0;}
 .r-42a4sc{margin-bottom:50px;}
 .r-4gszlv{background-size:cover;}
+.r-4m99jg{max-width:320px;}
 .r-4v7adb{height:5px;}
 .r-5753bg{background-color:rgba(26,26,46,1.00);}
 .r-5kkj8d{border-top-width:1px;}
@@ -289,6 +288,8 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-8ay8q1{letter-spacing:0.1px;}
 .r-97e31f{padding-bottom:env(safe-area-inset-bottom);}
 .r-9daxd3{animation-duration:250ms;}
+.r-9f3iom{color:rgba(160,208,176,1.00);}
+.r-9f4e4p{background-color:rgba(10,26,15,1.00);}
 .r-a023e6{font-size:15px;}
 .r-a2tzq0{justify-content:space-around;}
 .r-adyw6z{font-size:20px;}
@@ -386,6 +387,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-y7v2we{background-color:rgba(32,36,37,1.00);}
 .r-z80fyv{height:20px;}
 .r-zchlnj{right:0px;}
+.r-zd98yo{margin-bottom:32px;}
 .r-zebfov{box-shadow:0px 0px 4px rgba(239,68,68,0.50);}
 .r-zz5t5d{font-size:28px;}
 @-webkit-keyframes r-11cv4x{0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}
@@ -399,5 +401,5 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 @keyframes r-1pzkwqh{0%{transform:translateY(100%);}100%{transform:translateY(0%);}}
 @keyframes r-imtty0{0%{opacity:0;}100%{opacity:1;}}
 @keyframes r-q67da2{0%{transform:translateX(-100%);}100%{transform:translateX(400%);}}
-@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css" as="style"><link rel="stylesheet" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/intersections/_expo/static/js/web/entry-6fbdbb10590f1d46f4055f9129a091f2.js" defer></script>
+@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css" as="style"><link rel="stylesheet" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/intersections/_expo/static/js/web/entry-9b6e388ec9bb87a96cfb7c28bc6af552.js" defer></script>
 </body></html>
