--- a/_sitemap.html
+++ b/_sitemap.html
@@ -114,7 +114,6 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-10v3vxq{transform:scaleX(-1);}
 .r-10x49cs{font-size:10px;}
 .r-10xqauy{padding-top:env(safe-area-inset-top);}
-.r-117bsoe{margin-bottom:20px;}
 .r-118dpqk{color:rgba(15,15,26,1.00);}
 .r-11j9u27{visibility:hidden;}
 .r-11mpjr4{background-color:rgba(223,223,223,1.00);}
@@ -306,6 +305,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-c68hjy{color:rgba(161,161,161,1.00);}
 .r-cpa5s6{scroll-snap-align:start;}
 .r-cqee49{color:rgba(0,0,0,1.00);}
+.r-dd13yf{color:rgba(208,160,160,1.00);}
 .r-djgu52{color:rgba(102,102,102,1.00);}
 .r-dkge59{background-color:rgba(170,184,194,1.00);}
 .r-dnmrzs{max-width:100%;}
@@ -365,6 +365,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-tl32pe{background-color:rgba(58,90,138,1.00);}
 .r-tskmnb{padding-top:8px;}
 .r-tsynxw{text-transform:uppercase;}
+.r-u04jod{background-color:rgba(61,45,45,1.00);}
 .r-u6sd8q{background-repeat:no-repeat;}
 .r-u8s1d{position:absolute;}
 .r-u92y06{background-color:rgba(255,165,0,1.00);}
@@ -401,5 +402,5 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 @keyframes r-1pzkwqh{0%{transform:translateY(100%);}100%{transform:translateY(0%);}}
 @keyframes r-imtty0{0%{opacity:0;}100%{opacity:1;}}
 @keyframes r-q67da2{0%{transform:translateX(-100%);}100%{transform:translateX(400%);}}
-@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css" as="style"><link rel="stylesheet" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/intersections/_expo/static/js/web/entry-9b6e388ec9bb87a96cfb7c28bc6af552.js" defer></script>
+@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css" as="style"><link rel="stylesheet" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/intersections/_expo/static/js/web/entry-a0d631c7f545b49529ea74d5feecc929.js" defer></script>
 </body></html>
