--- a/_sitemap.html
+++ b/_sitemap.html
@@ -24,6 +24,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1h84pjw{border-bottom-left-radius:25px;border-bottom-right-radius:25px;border-top-left-radius:25px;border-top-right-radius:25px;}
 .r-1j16mh1{border-bottom-left-radius:100%;border-bottom-right-radius:100%;border-top-left-radius:100%;border-top-right-radius:100%;}
 .r-1jkafct{border-bottom-left-radius:2px;border-bottom-right-radius:2px;border-top-left-radius:2px;border-top-right-radius:2px;}
+.r-1jwulwa{overflow-x:scroll;overflow-y:scroll;}
 .r-1jyn79y{border-bottom-color:rgba(0,150,136,1.00);border-left-color:rgba(0,150,136,1.00);border-right-color:rgba(0,150,136,1.00);border-top-color:rgba(0,150,136,1.00);}
 .r-1lvfvwz{border-bottom-color:rgba(255,107,107,1.00);border-left-color:rgba(255,107,107,1.00);border-right-color:rgba(255,107,107,1.00);border-top-color:rgba(255,107,107,1.00);}
 .r-1pcd2l5{padding:20px;}
@@ -185,7 +186,6 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1ddef8g{-webkit-text-decoration-line:underline;text-decoration-line:underline;}
 .r-1dernwh{height:70%;}
 .r-1dnsj32{color:rgba(128,128,128,1.00);}
-.r-1dx08gc{background-color:rgba(26,10,10,1.00);}
 .r-1e6zz2d{color:rgba(221,221,221,1.00);}
 .r-1ei5mc7{cursor:inherit;}
 .r-1en7e38{background-color:rgba(42,74,58,1.00);}
@@ -318,7 +318,6 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-9aw3ui{gap:4px;}
 .r-9daxd3{animation-duration:250ms;}
 .r-9f3iom{color:rgba(160,208,176,1.00);}
-.r-9f4e4p{background-color:rgba(10,26,15,1.00);}
 .r-a023e6{font-size:15px;}
 .r-a2tzq0{justify-content:space-around;}
 .r-adyw6z{font-size:20px;}
@@ -438,5 +437,5 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 @keyframes r-1pzkwqh{0%{transform:translateY(100%);}100%{transform:translateY(0%);}}
 @keyframes r-imtty0{0%{opacity:0;}100%{opacity:1;}}
 @keyframes r-q67da2{0%{transform:translateX(-100%);}100%{transform:translateX(400%);}}
-@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css" as="style"><link rel="stylesheet" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/intersections/_expo/static/js/web/entry-93ea798be9fc03509df03ce138958681.js" defer></script>
+@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css" as="style"><link rel="stylesheet" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/intersections/_expo/static/js/web/entry-34a4c6f10211bd2b07a0ade49c6dbae6.js" defer></script>
 </body></html>
